asgn4/testing/92-uncomment.oc.err
92-uncomment.oc:1:1: error: unterminated comment
 /*
 ^
: status 0x0100, exit 1
